# plus254

./: .gitignore  AGENTS.md  Procfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: collect-annually.yml  collect-monthly.yml  collect-quarterly.yml  collect-weekly.yml  deploy.yml  generate-docs.yml  seed.yml
docs/stylesheets/: home.css
overrides/: home.html
overrides/partials/: header.html
scripts/: generate_data_docs.py
src/plus254/: datasets.yaml
src/plus254/api/: app.py  config.py  data.py  datasets.yaml  dependencies.py  exceptions.py  main.py  models.py
src/plus254/pipeline/: README.md  __init__.py  contracts.py  hf.py  merge.py
src/plus254/quality_checks/: __init__.py  dimensional_coverage.py  duplicates.py  exceptions.py  main.py  schema.py  standards.yaml
src/plus254/scrapers/: central_bank.json  central_bank.py  run_central_bank.py  tea.py
src/plus254/utils/: api_utils.py  config.py  df_utils.py  hf.py  hf_utils.py  logging.py  pdf.py  prune.py  scraping.py  scraping_utils.py  tidy.py
src/scripts/: migrate_columns.py  migrate_lowercase_months.py  seed.py
src/scripts/docs/: analyzer.py  config.py  main.py  markdown.py  schema.py
website/: astro.config.mjs  package-lock.json  package.json
website/src/: content.config.ts
website/src/components/: APIDocsLayout.astro  AboutLayout.astro  ActionGrids.astro  DatasetsLayout.astro  FeaturedData.astro  Footer.astro  Header.astro  Hero.astro  Mission.astro
website/src/content/: config.ts
website/src/layouts/: BaseLayout.astro
website/src/pages/: 404.astro  about.astro  (+1 more)
(+193 files in other folders)
